--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en" class="full-height">
 <head>
   <meta charset="utf-8">
-  <title>Hosting.Ureg.Asia</title>
+  <title>Best Hosting, Free Hosting for Student. </title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
